[gd_scene load_steps=21 format=2]

[ext_resource path="res://Script/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://PlayFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Play.tres" type="StyleBox" id=3]
[ext_resource path="res://MainText.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/mainMenu.png" type="Texture" id=5]
[ext_resource path="res://ExitFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Exit.tres" type="StyleBox" id=7]
[ext_resource path="res://PlayHover.tres" type="StyleBox" id=8]
[ext_resource path="res://ExitHover.tres" type="StyleBox" id=9]
[ext_resource path="res://Sprites/tick.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Slider.png" type="Texture" id=11]
[ext_resource path="res://Sprites/tickdown.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Sliderback.png" type="Texture" id=13]
[ext_resource path="res://Script/HSlider.gd" type="Script" id=14]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.054902, 0.172549, 0.501961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.196078, 0.6, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 2.316

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.435294, 0.117647, 0.117647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.501961, 0.137255, 0.137255, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 2.316

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.054902, 0.156863, 0.45098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.196078, 0.6, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false
anti_aliasing_size = 2.316

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 80, 10 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 80, 10 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 80, 10 )

[node name="Main_Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="MainMenu" type="Sprite" parent="."]
position = Vector2( 241, 300 )
scale = Vector2( 0.580078, 0.589844 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 6.0
margin_top = 62.0
margin_right = 226.0
margin_bottom = 91.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0.701961, 0.0666667, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Top Down Car Game"

[node name="Label2" type="Label" parent="."]
margin_left = 169.0
margin_top = 489.0
margin_right = 248.0
margin_bottom = 511.0
rect_scale = Vector2( 1.3, 1.3 )
custom_colors/font_color = Color( 1, 0.701961, 0.0666667, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Volume"

[node name="PlayBtn" type="Button" parent="."]
margin_left = 118.0
margin_top = 350.0
margin_right = 318.0
margin_bottom = 403.0
focus_next = NodePath("../LvlBtn")
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 3 )
text = "Play"

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 120.0
margin_top = 418.0
margin_right = 153.0
margin_bottom = 432.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = ExtResource( 7 )
text = "Exit"

[node name="LvlBtn" type="Button" parent="."]
margin_left = 118.0
margin_top = 419.0
margin_right = 318.0
margin_bottom = 472.0
focus_next = NodePath("../HSlider")
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = ExtResource( 8 )
custom_styles/normal = ExtResource( 3 )
text = "Levels"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 121.0
margin_top = 499.0
margin_right = 220.0
margin_bottom = 532.0
rect_scale = Vector2( 2, 2 )
focus_next = NodePath("../PlayBtn")
custom_icons/grabber_highlight = ExtResource( 12 )
custom_icons/grabber = ExtResource( 10 )
custom_styles/slider = SubResource( 5 )
custom_styles/grabber_area_highlight = SubResource( 6 )
custom_styles/grabber_area = SubResource( 7 )
min_value = -80.0
max_value = 0.0
script = ExtResource( 14 )

[connection signal="pressed" from="PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="LvlBtn" to="." method="_on_LvlBtn_pressed"]
[connection signal="mouse_exited" from="HSlider" to="HSlider" method="_on_HSlider_mouse_exited"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
